Adding doi to @inproceedings

--- a/main.bib
+++ b/main.bib
@@ -217,7 +217,8 @@
   author={Nagappan, Nachiappan and Ball, Thomas},
   booktitle={{Proceedings of the 27th International Conference on Software Engineering}},
   pages={284--292},
-  year={2005}
+  year={2005},
+  doi={10.1145/1062455.1062514}
 }
 
 @inproceedings{farago2015cumulative,
@@ -226,7 +227,8 @@
   booktitle={{Proceedings of the 15th International Working Conference on Source Code Analysis and Manipulation (SCAM)}},
   pages={141--150},
   year={2015},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/scam.2015.7335410}
 }
 
 @article{kelly1992analysis,
@@ -247,7 +249,8 @@
   booktitle={{Proceedings of the 26th International Conference on Software Engineering}},
   pages={282--291},
   year={2004},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icse.2004.1317450}
 }
 
 @article{fagan1976design,
@@ -410,7 +413,8 @@
   booktitle={{Proceedings of the International Conference on Software Quality, Reliability and Security (QRS)}},
   pages={191--201},
   year={2016},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/qrs.2016.31}
 }
 
 @inproceedings{nagappan2005static,
@@ -418,7 +422,8 @@
   author={Nagappan, Nachiappan and Ball, Thomas},
   booktitle={{Proceedings of the 27th International Conference on Software Engineering}},
   pages={580--586},
-  year={2005}
+  year={2005},
+  doi={10.1145/1062455.1062558}
 }
 
 @inproceedings{parnas1994software,
@@ -427,7 +432,8 @@
   booktitle={{Proceedings of the 16th International Conference on Software Engineering}},
   pages={279--287},
   year={1994},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icse.1994.296790}
 }
 
 @inproceedings{arafat2009comment,
@@ -436,7 +442,8 @@
   booktitle={{Proceedings of the 31st International Conference on Software Engineering, Companion Volume}},
   pages={195--198},
   year={2009},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icse-companion.2009.5070980}
 }
 
 @inproceedings{fluri2007code,
@@ -445,7 +452,8 @@
   booktitle={{Proceedings of the 14th Working Conference on Reverse Engineering (WCRE 2007)}},
   pages={70--79},
   year={2007},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/wcre.2007.21}
 }
 
 @inproceedings{woodfield1981effect,
@@ -453,7 +461,8 @@
   author={Woodfield, Scott N. and Dunsmore, Hubert E. and Shen, Vincent Y.},
   booktitle={{Proceedings of the 5th International Conference on Software Engineering}},
   pages={215--223},
-  year={1981}
+  year={1981},
+  doi={10.5555/800078.802534}
 }
 
 @inproceedings{haouari2011good,
@@ -462,7 +471,8 @@
   booktitle={{Proceedings of the 2011 International Symposium on Empirical Software Engineering and Measurement}},
   pages={137--146},
   year={2011},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/esem.2011.22}
 }
 
 @inproceedings{oman1992metrics,
@@ -471,7 +481,8 @@
   booktitle={{Proceedings of the International Conference on Software Maintenance}},
   pages={337--338},
   year={1992},
-  organization={IEEE Computer Society}
+  organization={IEEE Computer Society},
+  doi={10.1109/icsm.1992.242525}
 }
 
 @article{pascarella2019classifying,
@@ -492,7 +503,8 @@
   booktitle={Proceedings of the International Conference on Software Maintenance},
   pages={87--93},
   year={1996},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icsm.1996.564992}
 }
 
 @inproceedings{nurvitadhi2003class,
@@ -502,7 +514,8 @@
   volume={1},
   pages={T3C--T3C},
   year={2003},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/fie.2003.1263332}
 }
 
 @inproceedings{he2019understanding,
@@ -510,7 +523,8 @@
   author={He, Hao},
   booktitle={{Proceedings of the 27th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering}},
   pages={1217--1219},
-  year={2019}
+  year={2019},
+  doi={10.1145/3338906.3342494}
 }
 
 @inproceedings{hu2022practitioners,
@@ -518,7 +532,8 @@
   author={Hu, Xing and Xia, Xin and Lo, David and Wan, Zhiyuan and Chen, Qiuyuan and Zimmermann, Thomas},
   booktitle={{Proceedings of the 44th International Conference on Software Engineering}},
   pages={1693--1705},
-  year={2022}
+  year={2022},
+  doi={10.1145/3510003.3510152}
 }
 
 @inproceedings{roehm2012professional,
@@ -527,7 +542,8 @@
   booktitle={{Proceedings of the 34th International Conference on Software Engineering (ICSE)}},
   pages={255--265},
   year={2012},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icse.2012.6227188}
 }
 
 @inproceedings{stapleton2020human,
@@ -535,7 +551,8 @@
   author={Stapleton, Sean and Gambhir, Yashmeet and LeClair, Alexander and Eberhart, Zachary and Weimer, Westley and Leach, Kevin and Huang, Yu},
   booktitle={{Proceedings of the 28th International Conference on Program Comprehension}},
   pages={2--13},
-  year={2020}
+  year={2020},
+  doi={10.1145/3387904.3389258}
 }
 
 @book{kernighan1974elements,
@@ -551,7 +568,8 @@
   author={Brooks, Ruven},
   booktitle={{Proceedings of the 3rd International Conference on Software Engineering}},
   pages={196--201},
-  year={1978}
+  year={1978},
+  doi={10.5555/800099.803210}
 }
 
 @misc{spertus2021,
@@ -589,7 +607,8 @@
   author={Barnett, Jacob G. and Gathuru, Charles K. and Soldano, Luke S. and McIntosh, Shane},
   booktitle={{Proceedings of the 13th International Conference on Mining Software Repositories}},
   pages={496--499},
-  year={2016}
+  year={2016},
+  doi={10.1145/2901739.2903496}
 }
 
 @inproceedings{moser2008comparative,
@@ -597,7 +616,8 @@
   author={Moser, Raimund and Pedrycz, Witold and Succi, Giancarlo},
   booktitle={{Proceedings of the 30th international conference on Software engineering}},
   pages={181--190},
-  year={2008}
+  year={2008},
+  doi={10.1145/1368088.1368114}
 }
 
 @inproceedings{sohn2017fluccs,
@@ -605,7 +625,8 @@
   author={Sohn, Jeongju and Yoo, Shin},
   booktitle={{Proceedings of the 26th International Symposium on Software Testing and Analysis}},
   pages={273--283},
-  year={2017}
+  year={2017},
+  doi={10.1145/3092703.3092717}
 }
 
 @inproceedings{hassan2008road,
@@ -614,7 +635,8 @@
   booktitle={{Frontiers of Software Maintenance}},
   pages={48--57},
   year={2008},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/fosm.2008.4659248}
 }
 
 @inproceedings{arafat2009commit,
@@ -623,7 +645,8 @@
   booktitle={{Proceedings of the 42nd Hawaii International Conference on System Sciences}},
   pages={1--8},
   year={2009},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/hicss.2009.421}
 }
 
 @inproceedings{alali2008s,
@@ -632,7 +655,8 @@
   booktitle={{Proceedings of the 16th International Conference on Program Comprehension}},
   pages={182--191},
   year={2008},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icpc.2008.24}
 }
 
 @inproceedings{eyolfson2011time,
@@ -640,7 +664,8 @@
   author={Eyolfson, Jon and Tan, Lin and Lam, Patrick},
   booktitle={{Proceedings of the 8th Working Conference on Mining Software Repositories}},
   pages={153--162},
-  year={2011}
+  year={2011},
+  doi={10.1145/1985441.1985464}
 }
 
 @inproceedings{dyer2013boa,
@@ -649,7 +674,8 @@
   booktitle={2013 35th International Conference on Software Engineering (ICSE)},
   pages={422--431},
   year={2013},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icse.2013.6606588}
 }
 
 @inproceedings{d2010commit,
@@ -657,7 +683,8 @@
   author={{D'Ambros, Marco and Lanza, Michele and Robbes, Romain}},
   booktitle={{Proceedings of the 1st Workshop on Web 2.0 for Software Engineering}},
   pages={14--19},
-  year={2010}
+  year={2010},
+  doi={10.1145/1809198.1809204}
 }
 
 @inproceedings{buse2010automatically,
@@ -665,7 +692,8 @@
   author={Buse, Raymond P. L. and Weimer, Westley R.},
   booktitle={{Proceedings of the 25th International Conference on Automated Software Engineering}},
   pages={33--42},
-  year={2010}
+  year={2010},
+  doi={10.1145/1858996.1859005}
 }
 
 @inproceedings{cortes2014automatically,
@@ -674,7 +702,8 @@
   booktitle={{Proceedings of the 14th International Working Conference on Source Code Analysis and Manipulation}},
   pages={275--284},
   year={2014},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/scam.2014.14}
 }
 
 @article{zhang2024automatic,
@@ -691,7 +720,8 @@
   author={Hindle, Abram and German, Daniel M. and Holt, Ric},
   booktitle={{Proceedings of the International Working Conference on Mining Software Repositories}},
   pages={99--108},
-  year={2008}
+  year={2008},
+  doi={10.1145/1370750.1370773}
 }
 
 @inproceedings{li2023commit,
@@ -700,7 +730,8 @@
   booktitle={Proceedings of the 45th International Conference on Software Engineering (ICSE)},
   pages={806--817},
   year={2023},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icse48619.2023.00076}
 }
 
 @article{german2004using,
@@ -721,7 +752,8 @@
   booktitle={{Proceedings of the International Conference on Software Maintenance}},
   pages={120--130},
   year={2000},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icsm.2000.883028}
 }
 
 @inproceedings{atkins1999using,
@@ -729,7 +761,8 @@
   author={Atkins, David and Ball, Thomas and Graves, Todd and Mockus, Audris},
   booktitle={{Proceedings of the 21st International Conference on Software Engineering}},
   pages={324--333},
-  year={1999}
+  year={1999},
+  doi={10.1145/302405.302649}
 }
 
 @article{rochkind1975source,
@@ -749,7 +782,8 @@
   booktitle={{Proceedings of the Fifth International Software Metrics Symposium}},
   pages={267--273},
   year={1998},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/metric.1998.731253}
 }
 
 @book{lorenz1994object,
@@ -781,7 +815,8 @@
   author={Hilton, Michael and Nelson, Nicholas and Tunnell, Timothy and Marinov, Darko and Dig, Danny},
   booktitle={{Proceedings of the 11th Joint Meeting on Foundations of Software Engineering}},
   pages={197--207},
-  year={2017}
+  year={2017},
+  doi={10.1145/3106237.3106270}
 }
 
 @inproceedings{hilton2016usage,
@@ -789,7 +824,8 @@
   author={Hilton, Michael and Tunnell, Timothy and Huang, Kai and Marinov, Darko and Dig, Danny},
   booktitle={{Proceedings of the 31st International Conference on Automated Software Engineering}},
   pages={426--437},
-  year={2016}
+  year={2016},
+  doi={10.1145/2970276.2970358}
 }
 
 @article{parry2021survey,
@@ -810,7 +846,8 @@
   booktitle={{Proceedings of the 31st International Symposium on Software Reliability Engineering (ISSRE)}},
   pages={403--413},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/issre5003.2020.00045}
 }
 
 @misc{micco2016,
@@ -854,7 +891,8 @@
   author={Vasilescu, Bogdan and Yu, Yue and Wang, Huaimin and Devanbu, Premkumar and Filkov, Vladimir},
   booktitle={{Proceedings of the 10th Joint Meeting on Foundations of Software Engineering}},
   pages={805--816},
-  year={2015}
+  year={2015},
+  doi={10.1145/2786805.2786850}
 }
 
 @book{booch1994object,
@@ -871,7 +909,8 @@
   booktitle={{International Conference on Fundamental Approaches to Software Engineering}},
   pages={1--6},
   year={1998},
-  organization={Springer}
+  organization={Springer},
+  doi={10.1007/bfb0053579}
 }
 
 @inproceedings{rausch2017empirical,
@@ -880,7 +919,8 @@
   booktitle={{Proceedings of the 14th International Conference on Mining Software Repositories}},
   pages={345--355},
   year={2017},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/msr.2017.54}
 }
 
 @inproceedings{jain2018brief,
@@ -889,7 +929,8 @@
   booktitle={{Proceedings of the Progress in Advanced Computing and Intelligent Engineering}},
   pages={17--27},
   year={2018},
-  organization={Springer}
+  organization={Springer},
+  doi={10.1007/978-981-13-0224-4_2}
 }
 
 @book{johnson1977lint,
@@ -926,7 +967,8 @@
   booktitle={{Proceedings of the 27th International Conference on Program Comprehension (ICPC)}},
   pages={154--164},
   year={2019},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icpc.2019.00033}
 }
 
 @article{zou2019does,
@@ -945,7 +987,8 @@
   author={Rigby, Peter C. and Storey, Margaret-Anne},
   booktitle={{Proceedings of the 33rd International Conference on Software Engineering}},
   pages={541--550},
-  year={2011}
+  year={2011},
+  doi={10.1145/1985793.1985867}
 }
 
 @article{berry1985style,
@@ -1010,7 +1053,8 @@
   volume={1},
   pages={470--481},
   year={2016},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/saner.2016.105}
 }
 
 @inproceedings{zampetti2017open,
@@ -1019,7 +1063,8 @@
   booktitle={Proceedings of the 14th International Conference on Mining Software Repositories (MSR)},
   pages={334--344},
   year={2017},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/msr.2017.2}
 }
 
 @inproceedings{boogerd2008assessing,
@@ -1028,7 +1073,8 @@
   booktitle={Proceedings of the International Conference on Software Maintenance},
   pages={277--286},
   year={2008},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/icsm.2008.4658076}
 }
 
 @inproceedings{tomasdottir2017and,
@@ -1037,7 +1083,8 @@
   booktitle={{Proceedings of the 32nd International Conference on Automated Software Engineering (ASE)}},
   pages={578--589},
   year={2017},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/ase.2017.8115668}
 }
 
 @inproceedings{obermuller2021code,
@@ -1045,7 +1092,8 @@
   author={Oberm{\"u}ller, Florian and Bloch, Lena and Greifenstein, Luisa and Heuer, Ute and Fraser, Gordon},
   booktitle={{Proceedings of the 16th Workshop in Primary and Secondary Computing Education}},
   pages={1--10},
-  year={2021}
+  year={2021},
+  doi={10.1145/3481312.3481346}
 }
 
 @article{tomasdottir2018adoption,
@@ -1085,7 +1133,8 @@
   author={Kim, Sunghun and Ernst, Michael D.},
   booktitle={{Proceedings of the the 6th Joint Meeting of the European Software Engineering Conference}},
   pages={45--54},
-  year={2007}
+  year={2007},
+  doi={10.1145/1287624.1287633}
 }
 
 @inproceedings{arzt2015using,
@@ -1093,7 +1142,8 @@
   author={Arzt, Steven and Rasthofer, Siegfried and Hahn, Robert and Bodden, Eric},
   booktitle={Proceedings of the 4th International Workshop on State of the Art in Program Analysis},
   pages={1--6},
-  year={2015}
+  year={2015},
+  doi={10.1145/2771284.2771285}
 }
 
 @article{mccabe1976complexity,
@@ -1112,7 +1162,8 @@
   author={Campbell, G. Ann},
   booktitle={{Proceedings of the International Conference on Technical Debt}},
   pages={57--58},
-  year={2018}
+  year={2018},
+  doi={10.1145/3194164.3194186}
 }
 
 @article{lavazza2023empirical,
@@ -1139,7 +1190,8 @@
   author={Chidamber, Shyam R. and Kemerer, Chris F.},
   booktitle={{Proceedings of the Conference on Object-Oriented Programming Systems, Languages, and Applications}},
   pages={197--211},
-  year={1991}
+  year={1991},
+  doi={10.1145/117954.117970}
 }
 
 @article{stevens1974structured,
@@ -1226,7 +1278,8 @@
   author={Cunningham, Ward},
   booktitle={Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)},
   pages={29--30},
-  year={1992}
+  year={1992},
+  doi={10.1145/157710.157715}
 }
 
 @article{coleman1994,
@@ -1301,7 +1354,8 @@
   booktitle={2010 Fourth International Conference on Research Challenges in Information Science (RCIS)},
   url={http://dx.doi.org/10.1109/RCIS.2010.5507329},
   publisher={IEEE},
-  year={2010}
+  year={2010},
+  doi={10.1109/rcis.2010.5507329}
 }
 
 @misc{comartin2021,
@@ -1364,7 +1418,8 @@
   author={Livieri, Simone and Higo, Yoshiki and Matsushita, Makoto and Inoue, Katsuro},
   booktitle={Fourth International Workshop on Mining Software Repositories (MSR’07:ICSE Workshops 2007)},
   url={http://dx.doi.org/10.1109/MSR.2007.1},
-  year={2007}
+  year={2007},
+  doi={10.1109/msr.2007.1}
 }
 
 @inproceedings{krinke2011,
@@ -1372,7 +1427,8 @@
   author={Krinke, Jens},
   booktitle={Proceedings of the 5th International Workshop on Software Clones},
   url={http://dx.doi.org/10.1145/1985404.1985410},
-  year={2011}
+  year={2011},
+  doi={10.1145/1985404.1985410}
 }
 
 @article{romano2018,
@@ -1389,7 +1445,8 @@
   author={Eder, Sebastian and Junker, Maximilian and Jurgens, Elmar and Hauptmann, Benedikt and Vaas, Rudolf and Prommer, Karl-Heinz},
   booktitle={2012 34th International Conference on Software Engineering (ICSE)},
   url={http://dx.doi.org/10.1109/ICSE.2012.6227109},
-  year={2012}
+  year={2012},
+  doi={10.1109/icse.2012.6227109}
 }
 
 @inproceedings{jaspan2018,
@@ -1397,7 +1454,8 @@
   author={Jaspan, Ciera and Jorde, Matthew and Knight, Andrea and Sadowski, Caitlin and Smith, Edward K. and Winter, Collin and Murphy-Hill, Emerson},
   booktitle={Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Practice},
   url={http://dx.doi.org/10.1145/3183519.3183550},
-  year={2018}
+  year={2018},
+  doi={10.1145/3183519.3183550}
 }
 
 @article{potvin2016,
