--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -198,6 +198,18 @@ int f(int x) {
   {kim2007warnings}
 
 \qte
+  [Brittany Johnson]
+  {brittany-johnson.jpg}
+  {Our results confirmed that \ul{false positives} and developer \ul{overload} play a part in developers' dissatisfaction with current static analysis tools.}
+  {johnson2013don}
+
+\qte
+  [Benjamin Livshits]
+  {benjamin-livshits.jpg}
+  {We are not aware of a single realistic whole-program analysis tool that does not \ul{purposely} make unsound choices... Soundness is \ul{not even necessary} for most modern analysis applications, however, as many clients can tolerate unsoundness.}
+  {livshits2015defense}
+
+\qte
   [Steven Arzt]
   {steven-arzt.jpg}
   {In our experiments on DroidBench examples, TASMAN \ul{reduces} the number of false positives by about 80\% \ul{without pruning} any true positives.}
