--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -36,6 +36,12 @@
   {pradel2021neural}
 
 \qte
+  [Pavol Bielik]
+  {pavol-bielik.jpg}
+  {In this paper we present a new, automated approach for creating static analyzers: instead of manually providing the various inference rules of the analyzer, the key idea is to \ul{learn} these \ul{rules} from a \ul{dataset} of programs.}
+  {bielik2017learning}
+
+\qte
   [Uri Alon]
   {uri-alon.jpg}
   {\textbf{code2vec}: The main idea is to represent a code snippet as a single fixed-length \ul{code vector}, which can be used to \ul{predict} semantic properties of the snippet.}
