--- a/main.bib
+++ b/main.bib
@@ -1473,7 +1473,7 @@
 @inproceedings{bielik2017learning,
   title={{Learning a Static Analyzer from Data}},
   author={Bielik, Pavol and Raychev, Veselin and Vechev, Martin},
-  booktitle={{Proceedings of the 29th International Conference on Computer Aided Verification (CAV)},
+  booktitle={{Proceedings of the 29th International Conference on Computer Aided Verification (CAV)}},
   pages={233--253},
   year={2017},
   organization={Springer}
