--- a/main.bib
+++ b/main.bib
@@ -1456,7 +1456,8 @@
   booktitle={Proceedings of the 35th International Conference on Software Engineering (ICSE)},
   pages={672--681},
   year={2013},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/ICSE.2013.6606613}
 }
 
 @article{livshits2015defense,
@@ -1467,7 +1468,8 @@
   number={2},
   pages={44--46},
   year={2015},
-  publisher={ACM}
+  publisher={ACM},
+  doi={10.1145/2644805}
 }
 
 @inproceedings{bielik2017learning,
