--- a/main.bib
+++ b/main.bib
@@ -1478,5 +1478,6 @@
   booktitle={{Proceedings of the 29th International Conference on Computer Aided Verification (CAV)}},
   pages={233--253},
   year={2017},
-  organization={Springer}
+  organization={Springer},
+  doi={10.1007/978-3-319-63387-9_12}
 }
