--- a/sqm.sty
+++ b/sqm.sty
@@ -32,6 +32,7 @@
 \RequirePackage[template,scheme=light]{ppt-slides}
 \RequirePackage[nocn,novert]{ffcode}
 \RequirePackage{bibentry}
+\RequirePackage{underscore}
 \RequirePackage{natbib}
 \RequirePackage{doi}
 \RequirePackage{booktabs}
