--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -34,6 +34,8 @@
   {michael-pradel.jpg}
   {\ul{Neural} software analysis offers a \ul{fresh} approach, enhancing or even \ul{surpassing} traditional program analysis in some areas.}
   {pradel2021neural}
+\pitch{\includegraphics[width=.8\linewidth]{neural-flow.png}
+  \source{pradel2021neural}}
 
 \qte
   [Pavol Bielik]
