--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -42,6 +42,17 @@
   {bielik2017learning}
 
 \qte
+  [Tomas Mikolov]
+  {tomas-mikolov.jpg}
+  {The meanings of `Canada' and `Air' cannot be easily combined to obtain `Air Canada'. Motivated by this example, we present a simple method for finding phrases in text, and show that learning good \ul{vector representations} for millions of phrases is possible.}
+  {mikolov2013distributed}
+\qte
+  [Koushik Sen]
+  {koushik-sen.jpg}
+  {This paper presents DeepBugs, a learning approach to name-based bug detection, which reasons about names based on a semantic representation and which automatically learns bug detectors instead of manually writing them. We formulate bug detection as a \ul{binary classification problem} and train a classifier that distinguishes \ul{correct} from \ul{incorrect} code.}
+  {pradel2018deepbugs}
+
+\qte
   [Uri Alon]
   {uri-alon.jpg}
   {\textbf{code2vec}: The main idea is to represent a code snippet as a single fixed-length \ul{code vector}, which can be used to \ul{predict} semantic properties of the snippet.}
@@ -50,9 +61,6 @@
   \source{alon2019code2vec}}
 \pitch{\includegraphics[width=.95\linewidth]{code2vec-2.png}
   \source{alon2019code2vec}}
-
-\pitch{\includegraphics[width=.7\linewidth]{catid.png}
-  \source{taylor2023}}
 
 \qte
   [Mohammad Mahdi Mohajer]
@@ -63,7 +71,16 @@
 \qte
   [Haonan Li]
   {haonan-li.jpg}
-  {UBITect produces many false positives from the static analysis. With a pilot study of 20 false positives, we can successfully prune 8 out of 20 based on GPT-3.5, whereas GPT-4 had a near-perfect result of 16 out of 20.}
+  {UBITect produces many \ul{false positives} from the static analysis. With a pilot study of 20 false positives, we can successfully \ul{prune} 8 out of 20 based on GPT-3.5, whereas GPT-4 had a near-perfect result of 16 out of 20.}
   {li2023assisting}
+
+\qte
+  [Elif Nur Haner K{\i}r{\u{g}}{\i}l]
+  {elif-kirgil.jpg}
+  {In the study, the \ul{cohesion} value, which is one of the most important criteria for evaluating software quality, was predicted by RF, KNN, REPTree, SVM, MLP, and LR \ul{machine learning} techniques.}
+  {haner2023predicting}
+
+\pitch{\includegraphics[width=.7\linewidth]{catid.png}
+  \source{taylor2023}}
 
 \end{document}
