--- a/main.bib
+++ b/main.bib
@@ -1748,3 +1748,35 @@
   publisher={Association for Computing Machinery (ACM)},
   doi={10.1145/3460348}
 }
+
+@article{pradel2018deepbugs,
+  title={{DeepBugs: A Learning Approach to Name-Based Bug Detection}},
+  author={Pradel, Michael and Sen, Koushik},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={2},
+  number={OOPSLA},
+  pages={1--25},
+  year={2018},
+  publisher={ACM},
+  doi={10.1145/3276517}
+}
+
+@article{mikolov2013distributed,
+  title={{Distributed Representations of Words and Phrases and their Compositionality}},
+  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S. and Dean, Jeff},
+  journal={{Advances in Neural Information Processing Systems}},
+  volume={26},
+  year={2013}
+}
+
+@article{haner2023predicting,
+  title={{Predicting Software Cohesion Metrics with Machine Learning Techniques}},
+  author={Haner K{\i}r{\u{g}}{\i}l, Elif Nur and Er{\c{c}}elebi Ayy{\i}ld{\i}z, T{\"u}lin},
+  journal={{Applied Sciences}},
+  volume={13},
+  number={6},
+  pages={3722},
+  year={2023},
+  publisher={MDPI},
+  doi={10.3390/app13063722}
+}
