--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -30,7 +30,7 @@
 \qte
   [Larry Constantine]
   {../06-coupling/larry-constantine.jpg}
-  {Coupling is reduced when the relationships among elements not in the same module are minimized. There are two ways of achieving this- minimizing the relationships among modules and \ul{maximizing relationships} among elements in the same module.}
+  {Coupling is reduced when the relationships among elements not in the same module are minimized. There are two ways of achieving this: minimizing the relationships among modules and \ul{maximizing relationships} among elements in the same module.}
   {stevens1974structured}
 
 \plush{
@@ -43,7 +43,7 @@
   [Neal Ford]
   {neal-ford.jpg}
   {Architecture is the tension between coupling and cohesion.}
-  {ford_architecture}
+  {ford2024}
 
 \qte
   [Glenford J. Myers]
