--- a/main.bib
+++ b/main.bib
@@ -1367,7 +1367,7 @@
   year = {2021},
 }
 
-@misc{ford_architecture,
+@misc{ford2024,
   author = {Ford, Neal},
   howpublished = {\url{https://nealford.com/}},
   note = {[Online; accessed 15-03-2024]},
