--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -36,6 +36,12 @@
   {pradel2022}
 
 \qte
+  [Martin White]
+  {martin-white.jpg}
+  {Among the true positives, we found pairs mapping to all four clone types. We compared our approach to a traditional structure-oriented technique and found that our learning-based approach \ul{detected clones} that were either undetected or suboptimally reported by the prominent tool Deckard.}
+  {white2016deep}
+
+\qte
   [Pavol Bielik]
   {pavol-bielik.jpg}
   {In this paper we present a new, automated approach for creating static analyzers: instead of manually providing the various inference rules of the analyzer, the key idea is to \ul{learn} these \ul{rules} from a \ul{dataset} of programs.}
