--- a/main.bib
+++ b/main.bib
@@ -1780,3 +1780,12 @@
   publisher={MDPI},
   doi={10.3390/app13063722}
 }
+
+@inproceedings{white2016deep,
+  title={{Deep Learning Code Fragments for Code Clone Detection}},
+  author={White, Martin and Tufano, Michele and Vendome, Christopher and Poshyvanyk, Denys},
+  booktitle={{Proceedings of the 31st International Conference on Automated Software Engineering}},
+  pages={87--98},
+  year={2016},
+  doi={10.1145/2970276.2970326}
+}
