--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -27,12 +27,10 @@
 
 \plush{\sqmTitlePage{24}{}}
 
-% https://www.mdpi.com/2076-3417/13/6/3722
-
 \qte
   [Michael Pradel and Satish Chandra]
   {michael-pradel.jpg}
-  {Neural software analysis offers a fresh approach, enhancing or even surpassing traditional program analysis in some areas}
+  {\ul{Neural} software analysis offers a fresh approach, enhancing or even \ul{surpassing} traditional program analysis in some areas.}
   {pradel2022}
 
 \qte
