--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -28,10 +28,16 @@
 \plush{\sqmTitlePage{24}{}}
 
 \qte
-  [Michael Pradel and Satish Chandra]
+  [Michael Pradel]
   {michael-pradel.jpg}
   {\ul{Neural} software analysis offers a fresh approach, enhancing or even \ul{surpassing} traditional program analysis in some areas.}
-  {pradel2022}
+  {pradel2021neural}
+
+\qte
+  [Francesca Arcelli Fontana]
+  {francesca-arcelli-fontana.jpg}
+  {We conclude that the application of machine learning to the detection of [these] \ul{code smells} can provide high accuracy (>96\%), and only a hundred training examples are needed to reach at least 95\% accuracy.}
+  {arcelli2016comparing}
 
 \qte
   [Martin White]
