--- a/main.bib
+++ b/main.bib
@@ -1722,15 +1722,6 @@
   year = {2016},
 }
 
-@article{pradel2022,
-  author = {Pradel, Michael and Chandra, Satish},
-  doi = {10.1145/3460348},
-  journal = {{Communications of the ACM}},
-  publisher = {Association for Computing Machinery (ACM)},
-  title = {{Neural Software Analysis}},
-  year = {2022},
-}
-
 @article{pradel2018deepbugs,
   author = {Pradel, Michael and Sen, Koushik},
   doi = {10.1145/3276517},
@@ -1772,3 +1763,13 @@
   year = {2016},
 }
 
+@article{arcelli2016comparing,
+  title={{Comparing and Experimenting Machine Learning Techniques for Code Smell Detection}},
+  author={Arcelli Fontana, Francesca and M{\"a}ntyl{\"a}, Mika V. and Zanoni, Marco and Marino, Alessandro},
+  journal={{Empirical Software Engineering}},
+  volume={21},
+  pages={1143--1191},
+  year={2016},
+  publisher={Springer},
+  doi={10.1007/s10664-015-9378-4}
+}
