--- a/main.bib
+++ b/main.bib
@@ -1773,3 +1773,13 @@
   publisher={Springer},
   doi={10.1007/s10664-015-9378-4}
 }
+
+@inproceedings{di2018detecting,
+  title={{Detecting Code Smells using Machine Learning Techniques: Are We There Yet?}},
+  author={Di Nucci, Dario and Palomba, Fabio and Tamburri, Damian A and Serebrenik, Alexander and De Lucia, Andrea},
+  booktitle={{Proceedings of the 25th International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  pages={612--621},
+  year={2018},
+  organization={IEEE},
+  doi={10.1109/SANER.2018.8330266}
+}
