--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -63,6 +63,12 @@
   {pradel2018deepbugs}
 
 \qte
+  [Dario Di Nucci]
+  {dario-di-nucci.jpg}
+  {While \citet{arcelli2016comparing} opened a new perspective for code smell detection, in the context of our research we found a number of possible \ul{limitations} that might threaten the results of this study. Our findings show that the high performance achieved in their study was in fact due to the \ul{specific dataset} employed rather than the actual capabilities of machine-learning techniques for code smell detection.}
+  {di2018detecting}
+
+\qte
   [Uri Alon]
   {uri-alon.jpg}
   {\textbf{code2vec}: The main idea is to represent a code snippet as a single fixed-length \ul{code vector}, which can be used to \ul{predict} semantic properties of the snippet.}
