--- a/main.bib
+++ b/main.bib
@@ -1783,3 +1783,12 @@
   organization={IEEE},
   doi={10.1109/SANER.2018.8330266}
 }
+
+@inproceedings{rahman2024flakesync,
+  title={{FlakeSync: Automatically Repairing Async Flaky Tests}},
+  author={Rahman, Shanto and Shi, August},
+  booktitle={{Proceedings of the 46th International Conference on Software Engineering (ICSE)}},
+  pages={920--920},
+  year={2024},
+  organization={IEEE},
+}
