--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -182,4 +182,10 @@
   \end{enumerate*}}
   {parry2021survey}
 
+\qte
+  [Shanto Rahman]
+  {shanto-rahman.jpg}
+  {FlakeSync works by \ul{identifying} a critical point, representing some key part of code that must be executed early w.r.t. other concurrently executing code, and a barrier point, representing the part of code that should wait until the critical point has been executed. FlakeSync can \ul{modify} code to check when the critical point is executed and have the barrier point keep waiting until the critical point has been executed, essentially synchronizing these two parts of code for the specific test execution.}
+  {rahman2024flakesync}
+
 \end{document}
