--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Builds}
 \begin{document}
 
-\plush{\sqmTitlePage{21}{}}
+\plush{\sqmTitlePage{21}{QQUda0fAcxE}}
 
 \qte
   [Grady Booch]
