--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -50,6 +50,12 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 
 \thought{Tom McCabe suggested to prohibit functions where CC is larger than \ul{ten}. Modern static analyzers may help you control this automatically.}
 
+\qte
+  [Geoffrey K. Gill]
+  {geoffrey-gill.jpg}
+  {The complexity density ratio is demonstrated to be a useful predictor of software maintenance productivity on a small pilot sample of actual maintenance project.}
+  {gill1991cyclomatic}
+
 \plush{
   \pptBanner{Read this:}\par
   \href{https://www.yegor256.com/2015/06/29/simple-diagrams.html}{The Better Architect You Are, The Simpler Your Diagrams} (2015)\par
