--- a/main.bib
+++ b/main.bib
@@ -1792,3 +1792,14 @@
   year={2024},
   organization={IEEE},
 }
+
+@article{gill1991cyclomatic,
+  title={{Cyclomatic Complexity Density and Software Maintenance Productivity}},
+  author={Gill, Geoffrey K. and Kemerer, Chris F.},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={17},
+  number={12},
+  pages={1284--1288},
+  year={1991},
+  doi={10.1109/32.106988}
+}
