--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -27,6 +27,12 @@
 
 \plush{\sqmTitlePage{1}{q9Gr2xguP5I}}
 
+\qte
+  [Shari Lawrence Pfleeger]
+  {shari-lawrence-pfleeger.jpg}
+  {It's not enough to make claims about your software; you must support your claims with \ul{measurable evidence}.}
+  {pfleeger2008software}
+
 \thought{Everybody wants higher \ul{quality of code}, but nobody knows how to measure it.}
 
 \thought{Code \ul{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
