--- a/main.bib
+++ b/main.bib
@@ -1803,3 +1803,15 @@
   year={1991},
   doi={10.1109/32.106988}
 }
+
+@article{pfleeger2008software,
+  title={{Software Metrics: Progress After 25 Years?}},
+  author={Pfleeger, Shari Lawrence},
+  journal={{IEEE Software}},
+  volume={25},
+  number={6},
+  pages={32--34},
+  year={2008},
+  publisher={IEEE},
+  doi={10.1109/MS.2008.160}
+}
