--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -152,20 +152,7 @@
   {The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}
   {ardito2022}
 
-\pitch{\pptBanner{Milestones of Your Research}
-\begin{multicols}{2}
-\begin{enumerate}
-\item Research Question(s)
-\item Research Method
-\item Experiments
-\item Related Work
-\item Results
-\item Limitations
-\item Discussion
-\item Conclusion
-\item Introduction
-\item Abstract
-\item Title
-\end{enumerate}\end{multicols}}
+% let's say something about "aggregation of software metrics"
+% start from here: https://onlinelibrary.wiley.com/doi/abs/10.1002/smr.1558
 
 \end{document}
