quote on builds

--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -132,6 +132,12 @@
   \source{micco2017state}}
 
 \qte
+  [Carmine Vassallo]
+  {carmine-vassallo.jpg}
+  {In total, the 349 projects underwent 116,741 builds, of which 30,792 (26\%) failed. It is interesting to notice how the percentage of build failures is approximately the same in OSS and ING.}
+  {vassallo2017tale}
+
+\qte
   [Thomas Rausch]
   {thomas-rausch.jpg}
   {Process metrics have a significant impact on the build outcome in 8 of the 14 projects on average, but the strongest influencing factor across all projects is \ul{overall stability} in the \ul{recent build history}. For 10 projects, more than 50\% (up to 80\%) of all failed builds follow a previous build failure.}
