--- a/main.bib
+++ b/main.bib
@@ -1815,3 +1815,14 @@
   publisher={IEEE},
   doi={10.1109/MS.2008.160}
 }
+
+@inproceedings{vassallo2017tale,
+  title={{A Tale of CI Build Failures: An Open Source and a Financial Organization
+Perspective}},
+  author={Vassallo, Carmine and Schermann, Gerald and Zampetti, Fiorella and Romano, Daniele and Leitner, Philipp and Zaidman, Andy and Di Penta, Massimiliano and Panichella, Sebastiano},
+  booktitle={{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
+  pages={183--193},
+  year={2017},
+  organization={IEEE},
+  doi={10.1109/ICSME.2017.67}
+}
