--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -189,6 +189,12 @@
   {parry2021survey}
 
 \qte
+  [Pei Liu]
+  {pei-liu.jpg}
+  {We start by collecting a set of 84,475 open-source Android apps from the most popular three online code hosting sites, namely Github, GitLab, and Bitbucket. We then look into those apps and find that only around 10\% of apps have leveraged CI/CD services, i.e., the \ul{majority} of open-source Android apps are developed \ul{without} accessing CI/CD services.}
+  {liu2022first}
+
+\qte
   [Shanto Rahman]
   {shanto-rahman.jpg}
   {FlakeSync works by \ul{identifying} a critical point, representing some key part of code that must be executed early w.r.t. other concurrently executing code, and a barrier point, representing the part of code that should wait until the critical point has been executed. FlakeSync can \ul{modify} code to check when the critical point is executed and have the barrier point keep waiting until the critical point has been executed, essentially synchronizing these two parts of code for the specific test execution.}
