--- a/main.bib
+++ b/main.bib
@@ -1826,3 +1826,12 @@ Perspective}},
   organization={IEEE},
   doi={10.1109/ICSME.2017.67}
 }
+
+@inproceedings{liu2022first,
+  title={{A First Look at CI/CD Adoptions in Open-Source Android Apps}},
+  author={Liu, Pei and Sun, Xiaoyu and Zhao, Yanjie and Liu, Yonghui and Grundy, John and Li, Li},
+  booktitle={{Proceedings of the 37th International Conference on Automated Software Engineering}},
+  pages={1--6},
+  year={2022},
+  doi={10.1145/3551349.3561341}
+}
