--- a/main.bib
+++ b/main.bib
@@ -1835,3 +1835,12 @@ Perspective}},
   year={2022},
   doi={10.1145/3551349.3561341}
 }
+
+@inproceedings{santos2016judging,
+  title={{Judging a commit by its cover: Correlating commit message entropy with build status on Travis-CI}},
+  author={Santos, Eddie Antonio and Hindle, Abram},
+  year={2016},
+  pages={504-507},
+  booktitle={{Proceedings of the 13th Working Conference on Mining Software Repositories (MSR)}},
+  doi={10.7939/r3-h4d8-ej76}
+}
