--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -176,6 +176,12 @@
   {barnett2016relationship}
 
 \qte
+  [Eddie Antonio Santos]
+  {eddie-antonio-santos.jpg}
+  {Despite some evidence to suggest that the ``unusualness'' of a commit message is positively correlated with build failure, the slope is so gradual that it is \ul{infeasible} for an average developer to \ul{judge} a commit by simply reading its log message.}
+  {santos2016judging}
+
+\qte
   [Jeongju Sohn]
   {jeongju-sohn.jpg}
   {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
