--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -158,13 +158,19 @@
   {We observed that team size generally \ul{increases} the number of build failures. The interesting observation here is the minima after which there is a positive curve.}
   {jain2018brief}
 \pitch{\includegraphics[width=.5\linewidth]{team-size.png}
-  \par
   \source{jain2018brief}}
 \pitch{\includegraphics[width=.5\linewidth]{productivity.png}
-  \par
   \source{jain2018brief}}
 
 \plush{\pptThought{\href{}{On October 16, 2018}, \newline GitHub launched ``Actions''}}
+
+\qte
+  [Mehdi Golzadeh]
+  {mehdi-golzadeh.jpg}
+  {Together with Travis, GHA covers more than 80\% of all usages. Moreover, in only 18 months GHA has overtaken all other CIs in popularity.}
+  {golzadeh2022rise}
+\pitch{\includegraphics[width=.75\linewidth]{gha-growth.png}
+  \source{golzadeh2022rise}}
 
 \qte
   [Wing Lam]
