--- a/main.bib
+++ b/main.bib
@@ -1844,3 +1844,13 @@ Perspective}},
   booktitle={{Proceedings of the 13th Working Conference on Mining Software Repositories (MSR)}},
   doi={10.7939/r3-h4d8-ej76}
 }
+
+@inproceedings{golzadeh2022rise,
+  title={{On the rise and fall of CI services in GitHub}},
+  author={Golzadeh, Mehdi and Decan, Alexandre and Mens, Tom},
+  booktitle={{Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  pages={662--672},
+  doi={10.1109/SANER53432.2022.00084},
+  year={2022},
+  organization={IEEE}
+}
