--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -127,7 +127,7 @@ assert fibonacci(10) == 55;
 {\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
 
 \qte
-  [Yegor Bugayenko, Mirko Farina, Artem Kruglov, Witold Pedrycz, Yaroslav Plaksin, \ul{Giancarlo Succi}]
+  [Giancarlo Succi]
   {giancarlo-succi.jpg}
   {This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization to optimize a linear model with various preprocessing methods to determine the optimal model
 for task prioritization within a backlog.}
